--- a/style.css
+++ b/style.css
@@ -12,63 +12,63 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.container {
-    max-width: 360px;
-    margin: 0 auto;
+main {
+    max-width: 22.5rem;
 }
 
 .qr-code-and-text {
     background-color: hsl(0, 0%, 100%);
-    padding: 18px;
-    border-radius: 17px;
+    padding: 1.125rem;
+    border-radius: 1.063rem;
     text-align: center;
 }
 
 .qr-code-and-text img {
     width: 100%;
-    border-radius: 12px;
+    border-radius: 0.75rem;
 }
 
 .text {
-    padding: 22px 10px;
+    padding: 1.375rem 0.625rem;
 }
 
 .heading {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
-    padding: 15px 0;
+    padding: 0.938rem 0;
     color: hsl(218, 44%, 22%);
 }
 
+.sr-only:not(:focus):not(:active) {
+    position: absolute;
+    left: -10000px;
+    width: 1px;
+    height: 1px;
+    top: auto;
+    overflow: hidden;
+}
+
 .discription {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     color: hsl(220, 15%, 55%);
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 23.438rem) {
     body {
         min-height: 50vh;
     }
 
-    .container {
-        max-width: 180px;
-        margin: 0 auto;
+    main {
+        max-width: 10rem;
     }
 
     .qr-code-and-text {
-        padding: 10px;
-        border-radius: 13px;
-    }
-
-
-    .heading {
-        font-size: 13px;
-    }
-    
-    .discription {
-        font-size: 9px;
+        padding: 0.625rem;
+        border-radius: 0.813rem;
+        margin-top: 5rem;
     }
 }
